--- a/style.css
+++ b/style.css
@@ -1,68 +1,67 @@
-*{
+*, *:before, *:after{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
+  }
+  
+  body{
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: -webkit-linear-gradient(left, #a9abfa, #047c68);
+    background: -webkit-linear-gradient(left, #7579ff, #b224ef);
     font-family: 'Alata', sans-serif;
-}
-
-input, button{
-    border: none;
+  }
+  
+  input, button{
+    border:none;
     outline: none;
     background: none;
-}
-
-.cont{
+  }
+  
+  .cont{
     overflow: hidden;
     position: relative;
     width: 900px;
     height: 550px;
     background: #fff;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0,0,0,0.22);
-}
-
-.form{
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+  }
+  
+  .form{
     position: relative;
     width: 640px;
     height: 100%;
     margin-top: 20px;
     padding: 50px 30px;
-    -webkit-transition: -webkit-transform 1.2s ease-in-out;
+    -webkit-transition:-webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-}
-
-h2{
+  }
+  
+  h2{
     width: 100%;
     font-size: 30px;
     text-align: center;
-}
-
-label{
+  }
+  
+  label{
     display: block;
     width: 260px;
-    margin: 25px auto;
+    margin: 25px auto 0;
     text-align: center;
-}
-
-label span{
+  }
+  
+  label span{
     font-size: 14px;
     font-weight: 600;
     color: #505f75;
     text-transform: uppercase;
-
-}
-
-input{
+  }
+  
+  input{
     display: block;
     width: 100%;
     margin-top: 5px;
@@ -70,10 +69,10 @@ input{
     padding-bottom: 5px;
     border-bottom: 1px solid rgba(109, 93, 93, 0.4);
     text-align: center;
-    font-family: 'Alata', sans-serif;
-}
-
-button{
+    font-family: 'Alata', sans-serif; 
+  }
+  
+  button{
     display: block;
     margin: 0 auto;
     width: 260px;
@@ -82,36 +81,37 @@ button{
     color: #fff;
     font-size: 15px;
     cursor: pointer;
-}
-
-.submit{
+  }
+  
+  .submit{
     margin-top: 40px;
     margin-bottom: 30px;
     text-transform: uppercase;
     font-weight: 600;
     font-family: 'Alata', sans-serif;
-    background: -webkit-linear-gradient(left, #5e0505c0, #101b7c);;
-
-}
-
-.submit:hover{
-    background: -webkit-linear-gradient(left, #e26262c0, #520216);
-}
-
-.forgot-pass{
+      background: -webkit-linear-gradient(left, #5e0505c0, #101b7c);;
+  
+  }
+  
+  .submit:hover{
+      background: -webkit-linear-gradient(left, #e26262c0, #520216);
+  
+  }
+  
+  .forgot-pass{
     margin-top: 15px;
     text-align: center;
     font-size: 14px;
     font-weight: 600;
     color: #0c0101;
     cursor: pointer;
-}
-
-.forgot-pass:hover{
+  }
+  
+  .forgot-pass:hover{
     color: red;
-}
-
-.sub-cont{
+  }
+  
+  .sub-cont{
     overflow: hidden;
     position: absolute;
     left: 640px;
@@ -122,15 +122,15 @@ button{
     background: #fff;
     -webkit-transition: -webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
-    transition: transform 1.2s ease-in-out
-}
-
-.cont.s-signup .sub-cont {
-    -webkit-transform: translate3d(-640, 0, 0);
-            transform: translate3d(-640, 0, 0);
-}
-
-.img{
+    transition: transform 1.2s ease-in-out;
+  }
+  
+  .cont.s-signup .sub-cont{
+    -webkit-transform:translate3d(-640px, 0, 0);
+            transform:translate3d(-640px, 0, 0);
+  }
+  
+  .img{
     overflow: hidden;
     z-index: 2;
     position: absolute;
@@ -139,38 +139,37 @@ button{
     width: 260px;
     height: 100%;
     padding-top: 360px;
-}
-
-.img:before{
+  }
+  
+  .img:before{
     content: '';
     position: absolute;
     right: 0;
     top: 0;
     width: 900px;
     height: 100%;
-    background-image: url(bg1.jpg.jpg);
+    background-image: url(bg1.jpg);
     background-size: cover;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-}
-
-.img:after{
+  }
+  
+  .img:after{
     content: '';
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
-}
-
-.cont .s-signup .img:before{
-    -webkit-transform: translate3d(640px,0,0);
-            transform: translate3d(640px,0,0);
-
-}
-
-.img-text{
+    background: rgba(0,0,0,0.3);
+  }
+  
+  .cont.s-signup .img:before{
+    -webkit-transform:translate3d(640px, 0, 0);
+            transform:translate3d(640px, 0, 0);
+  }
+  
+  .img-text{
     z-index: 2;
     position: absolute;
     left: 0;
@@ -179,52 +178,53 @@ button{
     padding: 0 20px;
     text-align: center;
     color: #fff;
-    -webkit-transition: -webkit-transform 1.2s ease-in-out;
+    -webkit-transition:-webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-}
-
-.img-text h2{
+  }
+  
+  .img-text h2{
     margin-bottom: 10px;
     font-weight: normal;
-}
-
-.img-text p{
+  }
+  
+  .img-text p{
     font-size: 14px;
     line-height: 1.5;
-}
-
-.cont.s-signup .img-text.m-up{
-    -webkit-transform: translateX(520px);
-            transform: translateX(520px);
-}
-
-.img-text.m-in{
-    -webkit-transform: translateX(-520px);
-            transform: translateX(-520px);
-}
-
-.cont.s-signup .img-text.m-in{
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-}
-
-.sign-in{
+  }
+  
+  .cont.s-signup .img-text.m-up{
+    -webkit-transform:translateX(520px);
+            transform:translateX(520px);
+  }
+  
+  .img-text.m-in{
+    -webkit-transform:translateX(-520px);
+            transform:translateX(-520px);
+  }
+  
+  .cont.s-signup .img-text.m-in{
+    -webkit-transform:translateX(0);
+            transform:translateX(0);
+  }
+  
+  
+  .sign-in{
     padding-top: 65px;
-    -webkit-transition-timing-function: ease-out;
-            transition-timing-function: ease-out;
-}
-
-.cont .s-signup .sign-in{
-    -webkit-transition-timing-function: ease-in-out; 
-            transition-timing-function: ease-in-out;
-    -webkit-transition-duration: 1.2s;
-            transition-duration: 1.2s;
-    -webkit-transform: translate3d(640px, 0, 0);
-            transform: translate3d(640px, 0, 0);
-}
-
-.img-btn{
+    -webkit-transition-timing-function:ease-out;
+            transition-timing-function:ease-out;
+  }
+  
+  .cont .s-signup .sign-in{
+    -webkit-transition-timing-function:ease-in-out;
+            transition-timing-function:ease-in-out;
+    -webkit-transition-duration:1.2s;
+            transition-duration:1.2s; 
+    -webkit-transform:translate3d(640px, 0, 0);
+            transform:translate3d(640px, 0, 0);
+  }
+  
+  .img-btn{
     overflow: hidden;
     z-index: 2;
     position: relative;
@@ -236,9 +236,9 @@ button{
     text-transform: uppercase;
     font-size: 15px;
     cursor: pointer;
-}
-
-.img-btn:after{
+  }
+  
+  .img-btn:after{
     content: '';
     z-index: 2;
     position: absolute;
@@ -248,41 +248,45 @@ button{
     height: 100%;
     border: 2px solid #fff;
     border-radius: 30px;
-}
-
-.img-btn span{
+  }
+  
+  .img-btn span{
     position: absolute;
     left: 0;
     top: 0;
-    display:-webkit-box;
+    display: -webkit-box;
     display: flex;
-    -webkit-box-pack: center;
+    -webkit-box-pack:center;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    -webkit-transition: -webkit-transform 1.2s;
-    transition: -webkit-transform 1.2s ;
+    -webkit-transition:-webkit-transform 1.2s;
+    transition: -webkit-transform 1.2s;
     transition: transform 1.2s;
-    transition: transform 1.2s, -webkit-transform 1.2s;
-}
-
-.img-btn span.m-in{
-    -webkit-transform: translateY(-72px);
-            transform: translateY(-72px);
-}
-
-.img-btn span.m-up{
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-}
-
-.sign-up{
+    transition: transform 1.2s, -webkit-transform 1.2s;;
+  }
+  
+  .img-btn span.m-in{
+    -webkit-transform:translateY(-72px);
+            transform:translateY(-72px);
+  }
+  .cont.s-signup .img-btn span.m-in{
+    -webkit-transform:translateY(0);
+            transform:translateY(0);
+  }
+  
+  .cont.s-signup .img-btn span.m-up{
+    -webkit-transform:translateY(72px);
+            transform:translateY(72px);
+  }
+  
+  .sign-up{
     -webkit-transform:translate3d(-900px, 0, 0);
             transform:translate3d(-900px, 0, 0);
-}
-
-.cont .s-signup .sign-up{
+  }
+  
+  .cont.s-signup .sign-up{
     -webkit-transform:translate3d(0, 0, 0);
             transform:translate3d(0, 0, 0);
-}
+  }
