Arranged File in Particular Order and all must follow it

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,7 +163,7 @@
     top: 0;
     width: 900px;
     height: 100%;
-    background-image: url(bg1.jpg);
+    background-image: url(/Images/bg1.jpg);
     background-size: cover;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
