--- a/injoy.css
+++ b/injoy.css
@@ -3,28 +3,77 @@
     margin: 0 auto;
   }
   
-  .text {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    padding: 80px;
-  }
+.text {
+  font-family: Garamond;
+  font-style: italic;
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  width: 60%;
+  padding: 10px;
+}
 
-  .icon {
-    width: 100%;
-    background-color: rgb(38, 112, 209);
-    overflow: auto;
-  }
-  
-  .icon a {
-    float: left;
-    padding: 12px;
-    color: rgb(53, 49, 49);
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .icon a:hover {
-    background-color: #000;
-  }
+.button {
+  background-color: rgb(22, 236, 236);
+}
 
+.button input[type=text] {
+  float: right;
+  padding: 4px 16px;
+  margin-top: 8px;
+  margin-right: 16px;
+  border: none;
+  font-size: 17px;
+}
+
+.btn {
+  font-style: oblique;
+  font-weight: bold;
+  background-color: rgb(22, 236, 236);
+  border: hidden;
+  color: rgb(1, 2, 2);
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: RoyalBlue;
+}
+
+.log {
+  float: right;
+  font-style: oblique;
+  font-weight: bold;
+  background-color: rgb(22, 236, 236);
+  border: hidden;
+  color: rgb(1, 2, 2);
+  padding: 12px 16px;
+  padding-right: 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.log:hover {
+  background-color: RoyalBlue;
+}
+
+.block1 {
+  position: absolute;
+  padding: 12px 16px;
+  padding-right: 20px;
+}
+
+.block1 img {
+  border: 2px solid black;
+}
+
+.text_block {
+  position: absolute;
+  bottom: 21px;
+  left: 25px;
+  background-color: rgb(109, 110, 102);
+  color: white;
+  padding: 10px 25px;
+  padding-right: 20px;
+}
