--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: -webkit-linear-gradient(left, #7579ff, #b224ef);
+    background-image: linear-gradient(rgba(10, 9, 9, 0.671),rgba(22, 21, 21, 0.747)),url('../Images/pexels-pixabay-247819.jpg');
+    background-size: cover;
     font-family: 'Alata', sans-serif;
   }
   
@@ -22,6 +23,7 @@
 
   .ml15 {
     display: flex;
+    color: antiquewhite;
     padding: 4px 194px;
     margin-top: 23px;
     font-weight: 300;
@@ -40,8 +42,8 @@
     position: relative;
     width: 900px;
     height: 550px;
-    background: #fff;
-    box-shadow: rgba(0, 0, 19px, 38px ), 0 15px 12px 14 rgba(11, 56, 22, 0.692);
+    background: rgba(15, 15, 15, 0.616);
+    box-shadow: 5px 10px 20px rgba(115, 194, 47, 0.829), 0 6px 6px rgba(25, 51, 10, 0.76);
   }
   
   .form{
@@ -57,6 +59,7 @@
   }
   
   h2{
+    color: antiquewhite;
     width: 100%;
     font-size: 30px;
     text-align: center;
@@ -118,7 +121,7 @@
     text-align: center;
     font-size: 14px;
     font-weight: 600;
-    color: #0c0101;
+    color: #eee4e4f3;
     cursor: pointer;
   }
   
@@ -134,7 +137,7 @@
     width: 900px;
     height: 100%;
     padding-left: 260px;
-    background: #fff;
+    background: rgba(15, 15, 15, 0.616);
     -webkit-transition: -webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out;
@@ -163,8 +166,8 @@
     top: 0;
     width: 900px;
     height: 100%;
-    background-image: url(../Images/bg.jpg);
     background-size: cover;
+    background: rgb(36, 35, 35);
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
   }
