--- a/CSS/injoy.css
+++ b/CSS/injoy.css
@@ -37,21 +37,21 @@ header{
 .capt{
     float: left;
     margin-top: 40px;
-    margin-left: 15px;
+    margin-left: 1%;
 }
 
 
 .side{
     float: left;
     margin-top: -22px;
-    margin-left: 30%;
-    margin-right: 20px;
+    margin-left: 40%;
+    margin-right: 10px;
 }
 
 .side li{
     display: inline-block;
     list-style: none;
-    margin-left: 30px;
+    margin-left: 55px;
 }
 
 .side li a{
@@ -62,11 +62,6 @@ header{
     font-weight: 100;
 }
 
-.side input{
-    border: none;
-    margin-left: 30px;
-}
-
 .side li a:hover{
     border-bottom: 3px solid #0905f3c0;
 }
@@ -74,7 +69,7 @@ header{
 .menu{
     float: left;
     margin-top: 40px;
-    margin-left: 23%;
+    margin-left: 32%;
     margin-right: 10px;
 }
 
@@ -97,22 +92,19 @@ header{
     margin-left: 30px;
 }
 
-.menu li a:hover{
-    border-bottom: 3px solid #0905f3c0;
-}
-
 .option{
     display: none;
     position: absolute;
     background-color: #0a0a08da;
     margin-top: 65px;
+    margin-right: 90px;
     min-width: 160px;
     box-shadow: 3px 6px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .option li{
-    display: inline;
+    display: -webkit-inline-flex;
 }
 
 .option li a{
@@ -123,8 +115,7 @@ header{
 }
 
 .option li a:hover{
-    background-color: rgba(67, 71, 67, 0.705);
-    border-bottom: 2px solid #3364eccc;
+    background-color: rgba(49, 100, 49, 0.705);
 }
 
 .menu:hover .option{
@@ -132,6 +123,8 @@ header{
 }
 
 .cards {
+	flex-wrap: wrap;
+	justify-content: center;
     padding-top: 140px;
     max-width: 1800px;
     margin-left: 9%;
@@ -142,12 +135,13 @@ header{
 	box-shadow: 5px 10px 20px rgba(115, 194, 47, 0.829), 0 6px 6px rgba(25, 51, 10, 0.76);
     border-radius: 5px;
     display: inline-block;
-    padding: 25px;
+    padding: 20px;
     list-style: none;
 	position: relative;
     margin: 3%;
     width: 300px;
-    height: 150px;
+    height: 170px;
+    transition: inherit;
 }
 
 .card a{
@@ -167,11 +161,17 @@ header{
     color: aliceblue;
 }
 
+.card:hover{
+    transform: scale(0.9);
+}
+
 /* main.html is end */
 
 
 /* contect.html is start */
 .info {
+    flex-wrap: wrap;
+	justify-content: center;
     padding-top: 110px;
     max-width: 1800px;
     margin-left: 9%;
@@ -188,6 +188,7 @@ header{
     margin: 3%;
     width: 300px;
     height: 430px;
+    transition: inherit;
 }
 
 .box a p{
@@ -220,11 +221,17 @@ header{
     width: auto;
     margin-top: 5px;
 }
+
+.box:hover{
+    transform: scale(0.9);
+}
 /* contect.html is end */
 
 
 /* About.html is start */
 .inte {
+    flex-wrap: wrap;
+	justify-content: center;
 	background-color: rgba(17, 15, 15, 0.76);
 	box-shadow: 5px 10px 20px rgba(115, 194, 47, 0.829), 0 6px 6px rgba(25, 51, 10, 0.76);
     border-radius: 5px;
@@ -235,7 +242,7 @@ header{
     margin-top: 40px;
     margin-left: 10%;
     width: 1100px;
-    height: 440px;
+    height: 470px;
 }
 
 .inte h2{
