--- a/CSS/injoy.css
+++ b/CSS/injoy.css
@@ -87,19 +87,13 @@ header{
     font-weight: 100;
 }
 
-.menu input{
-    border: none;
-    margin-left: 30px;
-}
-
 .option{
     display: none;
     position: absolute;
-    background-color: #0a0a08da;
+    background-color: none;
     margin-top: 65px;
     margin-right: 90px;
-    min-width: 160px;
-    box-shadow: 3px 6px rgba(0,0,0,0.2);
+    min-width: 20px;
     z-index: 1;
 }
 
@@ -115,7 +109,7 @@ header{
 }
 
 .option li a:hover{
-    background-color: rgba(49, 100, 49, 0.705);
+    background-color: rgba(7, 7, 7, 0.925);
 }
 
 .menu:hover .option{
@@ -150,6 +144,7 @@ header{
 
 .card h2{
     color: chartreuse;
+    height: 130px;
     
 }
 
@@ -187,7 +182,7 @@ header{
 	position: relative;
     margin: 3%;
     width: 300px;
-    height: 430px;
+    height: 450px;
     transition: inherit;
 }
 
@@ -219,7 +214,7 @@ header{
     color: aliceblue;
     height: 60px;
     width: auto;
-    margin-top: 5px;
+    margin-top: -5px;
 }
 
 .box:hover{
@@ -242,7 +237,7 @@ header{
     margin-top: 40px;
     margin-left: 10%;
     width: 1100px;
-    height: 470px;
+    height: 500px;
 }
 
 .inte h2{
@@ -257,3 +252,45 @@ header{
     margin-top: 20px; 
 }
 /* About.html is end */
+
+
+/* Data.html is start */
+
+.section {
+    flex-wrap: wrap;
+	justify-content: center;
+    padding-top: 140px;
+    max-width: 1800px;
+    margin-left: 9%;
+}
+
+.home {
+	background-color: rgba(17, 15, 15, 0.76);
+	box-shadow: 5px 10px 20px rgba(115, 194, 47, 0.829), 0 6px 6px rgba(25, 51, 10, 0.76);
+    border-radius: 5px;
+    display: inline-block;
+    padding: 20px;
+    list-style: none;
+	position: relative;
+    margin: 3%;
+    width: 300px;
+    height: 410px;
+    transition: inherit;
+}
+
+.home h2{
+    color: chartreuse;
+    text-align: center;
+    background-color: rgba(210, 105, 30, 0.555);
+}
+
+.home .bord{
+    border-bottom: 2px solid rgba(210, 105, 30, 0.555);
+}
+
+.bord{
+    margin-top: 15px;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+/* Data.html is end */
