--- a/CSS/injoy.css
+++ b/CSS/injoy.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+nav{
+    background-color: rgba(17, 15, 15, 0.76);
+	box-shadow: 0px 0px 20px rgba(115, 194, 47, 0.829);
+    width: 100%;
+    height: 120px;
+    display: inline-block;
+}
+
 body{
     font-size: 20px;
     overflow-x: hidden;
@@ -20,6 +28,19 @@ header{
 .logo{
     max-width: 1180px;
     margin: 0 auto;
+    animation-duration: 2000ms;
+    animation-name: blaks;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes blaks{
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
 }
 
 .logo img{
@@ -44,8 +65,8 @@ header{
 .side{
     float: left;
     margin-top: -22px;
-    margin-left: 40%;
-    margin-right: 10px;
+    margin-left: 38%;
+    margin-right: 1%;
 }
 
 .side li{
@@ -69,7 +90,7 @@ header{
 .menu{
     float: left;
     margin-top: 40px;
-    margin-left: 32%;
+    margin-left: 31%;
     margin-right: 10px;
 }
 
@@ -90,7 +111,7 @@ header{
 .option{
     display: none;
     position: absolute;
-    background-color: none;
+    background-color: rgba(10, 9, 9, 0.671);
     margin-top: 65px;
     margin-right: 90px;
     min-width: 20px;
@@ -109,7 +130,7 @@ header{
 }
 
 .option li a:hover{
-    background-color: rgba(7, 7, 7, 0.925);
+    background-color: rgba(86, 230, 50, 0.384);
 }
 
 .menu:hover .option{
@@ -119,7 +140,7 @@ header{
 .cards {
 	flex-wrap: wrap;
 	justify-content: center;
-    padding-top: 140px;
+    padding-top: 20px;
     max-width: 1800px;
     margin-left: 9%;
 }
@@ -167,7 +188,7 @@ header{
 .info {
     flex-wrap: wrap;
 	justify-content: center;
-    padding-top: 110px;
+    padding-top: 10px;
     max-width: 1800px;
     margin-left: 9%;
 }
@@ -187,6 +208,7 @@ header{
 }
 
 .box a p{
+    color: orange;
     margin-top: -55px;
     margin-left: 15px;
     text-decoration: none;
@@ -199,7 +221,7 @@ header{
 }
 
 .box p{
-    color: aliceblue;
+    color: rgba(187, 175, 14, 0.815);
     text-align: center;
     padding-top: 10px;
 }
@@ -211,7 +233,6 @@ header{
 }
 
 .box a img{
-    color: aliceblue;
     height: 60px;
     width: auto;
     margin-top: -5px;
@@ -231,10 +252,10 @@ header{
 	box-shadow: 5px 10px 20px rgba(115, 194, 47, 0.829), 0 6px 6px rgba(25, 51, 10, 0.76);
     border-radius: 5px;
     display: inline-block;
-    padding: 10px;
+    padding: 1px;
     list-style: none;
     position: relative;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-left: 10%;
     width: 1100px;
     height: 500px;
@@ -259,7 +280,7 @@ header{
 .section {
     flex-wrap: wrap;
 	justify-content: center;
-    padding-top: 140px;
+    padding-top: 10px;
     max-width: 1800px;
     margin-left: 9%;
 }
@@ -282,15 +303,28 @@ header{
     color: chartreuse;
     text-align: center;
     background-color: rgba(210, 105, 30, 0.555);
+    border-radius: 4px;
 }
 
 .home .bord{
-    border-bottom: 2px solid rgba(210, 105, 30, 0.555);
+    border-bottom: 2px solid rgba(72, 210, 30, 0.925);
 }
 
 .bord{
     margin-top: 15px;
     margin-left: -20px;
     margin-right: -20px;
+}
+
+.links a{
+    text-decoration: none;
+}
+
+.links h2{
+    margin-top: 17px;
+    color: chartreuse;
+    text-align: center;
+    background-color: rgba(210, 105, 30, 0.555);
+    border-radius: 7px;
 }
 /* Data.html is end */
